# Cardano.swift

./: .gitignore  Cardano-Binaries.podspec  Cardano.podspec  Cardano.swift.podspec  Package.swift  README.md
.github/workflows/: build.yml  deploy.yml
Rust/: .gitignore  Cargo.toml  build.rs  cbindgen.toml
Sources/Blockfrost/: AddressTransaction+Blockfrost.swift  BlockfrostNetworkProvider.swift  Cardano+Blockfrost.swift  ChainTransaction+Blockfrost.swift  NetworkApiInfo+Blockfrost.swift  TransactionUnspentOutput+Blockfrost.swift  UTXO+Blockfrost.swift  Value+Blockfrost.swift
Sources/CCardano/: ccardano.h  empty.c  module.modulemap
Sources/Cardano/: Account.swift  Address.swift  AddressKind.swift  AddressManager.swift  Array.swift  Asset.swift  Assets.swift  AsyncMap.swift  BigInt.swift  Bip32.swift  Bip32PrivateKey.swift  Bip32PublicKey.swift  BootstrapWitness.swift  Cardano.swift  CardanoApi.swift  CardanoSendApi.swift  CardanoTxApi.swift  Certificate.swift  ChainTransaction.swift  Crypto.swift  Data.swift  Error.swift  (+48 more)
Tests/: LinuxMain.swift
rust/: .gitignore  Cargo.toml  build.rs  cbindgen.toml
rust/scripts/: build_binary.sh  build_binary_linux.sh  build_binary_macos.sh  compressed_binary_macos.sh  module.modulemap  push_binary_pod.sh  xcode_build_step.sh
rust/src/: address.rs  array.rs  asset_name.rs  assets.rs  bip32_private_key.rs  bip32_public_key.rs  bootstrap_witness.rs  certificate.rs  constr_plutus_data.rs  data.rs  ed25519_signature.rs  error.rs  general_transaction_metadata.rs  genesis_key_delegation.rs  int.rs  json_value.rs  lib.rs  linear_fee.rs  map.rs  metadata_list.rs  metadata_map.rs  move_instantaneous_rewards_cert.rs  multi_asset.rs  network_info.rs  option.rs  panic.rs  plutus_list.rs  plutus_map.rs  pointer.rs  pool_registration.rs  pool_retirement.rs  private_key.rs  protocol_param_update.rs  ptr.rs  public_key.rs  stake_credential.rs  stake_delegation.rs  stake_deregistration.rs  stake_registration.rs  string.rs  (+15 more)
rust/src/address/: addr_type.rs  address.rs  base.rs  byron.rs  enterprise.rs  mod.rs  pointer.rs  reward.rs
scripts/: build_rust_cocoapods.sh  build_rust_spm.sh
(+111 files in other folders)
