[package]
name = "cardano-c-bindings"
version = "0.0.1"
authors = ["Tesseract Systems, Inc. <info@tesseract.one>"]
license = "Apache-2.0"
description = "Cardano bindings for C."
keywords = [ "Tesseract", "Cardano", "C" ]
edition = "2018"

[dependencies]
cardano-serialization-lib = { git = "https://github.com/Emurgo/cardano-serialization-lib.git" }
linked-hash-map = "0.5.3"
serde_json = "1.0.57"

[build-dependencies]
cbindgen = "0.20.0"

[lib]
name = "cardano"
path = "src/lib.rs"
crate-type = ["staticlib"]
