[package]
name = "cardano-c-bindings"
version = "0.0.1"
authors = ["Tesseract Systems, Inc. <info@tesseract.one>"]
license = "Apache-2.0"
description = "Cardano bindings for C."
keywords = [ "Tesseract", "Cardano", "C" ]
edition = "2018"

[dependencies]
cardano-serialization-lib = "10.0.4"
linked-hash-map = "0.5.3"
serde_json = "1.0.57"
num-bigint = "0.4.0"

[build-dependencies]
cbindgen = "0.23.0"

[lib]
name = "cardano"
path = "src/lib.rs"
crate-type = ["staticlib"]

[profile.release]
strip = true
lto = true